infra/preprocessed_tweets/preprocessed-tweets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprocessed-tweets
spec:
  type: LoadBalancer
  selector:
    app: preprocessed-tweets
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
