infra/preprocessed_tweets/preprocessed_tweets_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprocessed_tweets
spec:
  selector:
    app: preprocessed_tweets
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
