infra/preprocessed_tweets/preprocessed-tweets-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: preprocessed-tweets
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: preprocessed-tweets
  port:
    targetPort: 8001
  tls:
    termination: edge
